# inMyRoom_vulkan

./: .gitignore  .gitmodules  README.md  RENDERING.md  build.bat  buildForVS2017.bat  buildForVS2019.bat  buildForVS2022.bat
inMyRoom_vulkan/: .gitignore  CMakeLists.txt  config.cfg  inMyRoom_vulkan.sln  inMyRoom_vulkan.vcxproj  inMyRoom_vulkan.vcxproj.filters
inMyRoom_vulkan/Debug/: vc141.idb
inMyRoom_vulkan/Debug/inMyRoom_vulkan.tlog/: inMyRoom_vulkan.lastbuildstate
inMyRoom_vulkan/Shaders/: teapot_glsl.vert
inMyRoom_vulkan/include/: CameraBaseClass.h  ComponentBaseClass.h  ComponentRawBaseClass.h  ComponentSparseBaseClass.h  ComponentsIDsEnum.h  Cuboid.h  Drawer.h  ECSwrapper.h  Engine.h  EntitiesHandler.h  ExportedFunctionsConstructor.h  FixedString.h  FrustumCulling.h  GameDLLimporter.h  GameImport.h  GameImporter.h  Graphics.h  ImagesAboutOfTextures.h  ImagesUsageOfTextures.h  InputManager.cpp  InputManager.h  MaterialsOfPrimitives.h  MaterialsTextures.h  MeshesOfNodes.h  MeshesPrimitives.h  MipmapsGenerator.h  ModelDrawComp.h  ModelDrawCompEntity.h  MovementBaseClass.h  NaiveCamera.h  NodeGlobalMatrixComp.h  NodeGlobalMatrixCompEntity.h  NodesMeshes.h  NodesOfScene.h  NodesTree.h  OBB.h  PipelinesFactory.h  PipelinesOfPrimitives.h  Plane.h  PositionComp.h  (+21 more)
inMyRoom_vulkan/include/CollisionDetection/: CollisionDetection.h  CreateUncollideRays.h  OBBtreesCollision.h  RayDeltaUncollide.h  RayDistance.h  ShootUncollideRays.h  SweepAndPrune.h  TrianglesVsTriangles.h
inMyRoom_vulkan/include/ECS/: CompEntityBase.h  CompEntityBaseClass.h  CompEntityBaseWrappedClass.h  ComponentBaseClass.h  ComponentBaseWrappedClass.h  ComponentDataClass.h  ComponentRawBaseClass.h  ComponentSparseBaseClass.h  ComponentsIDsEnum.h  ConceptHelpers.h  ECStypes.h  ECSwrapper.h  EnginesExportedFunctions.h  EntitiesHandler.h  ExportedFunctions.h  TemplateHelpers.h
inMyRoom_vulkan/include/Geometry/: Cuboid.h  Cylinder.h  FrustumCulling.h  OBB.h  OBBtree.h  Paralgram.h  Plane.h  Ray.h  Sphere.h  Triangle.h  ViewportFrustum.h
inMyRoom_vulkan/include/Graphics/: Drawer.h  DynamicMeshes.h  Exposure.h  Graphics.h  HelperUtils.h  ImageData.h  ImagesInterfaces.h  Lights.h  MipmapsGenerator.h  NRDintegration.h  PipelinesFactory.h  RendererBase.h  ShadersSetsFamiliesCache.h  TLASbuilder.h  TLASinstance.h  VulkanInit.h
inMyRoom_vulkan/include/Meshes/: ImagesAboutOfTextures.h  MaterialsOfPrimitives.h  MeshesOfNodes.h  PrimitivesOfMeshes.h  SkinsOfMeshes.cpp  SkinsOfMeshes.h  TexturesOfMaterials.h
inMyRoom_vulkan/matlab/roughness_normal_length_map/: f_GGXsample.m  f_GGXxCOSsample.m  length_to_rough_fit_helper.m  length_to_rough_test.m  rough_to_length_fit_helper.m  rough_to_length_test.m  sampler.m
inMyRoom_vulkan/shaders/: 16bitTo8bit_glsl.frag  16bitTo8bit_glsl.vert  dynamicMeshShader_glsl.comp  generalMesh_glsl.frag  generalMesh_glsl.vert  generalMipmap_glsl.comp  generalShader_glsl.frag  generalShader_glsl.vert  histogramShader_glsl.comp  lightSourcePass_glsl.vert  shadePass_glsl.frag  texturePass_glsl.frag  texturePass_glsl.vert  toneMapPass_glsl.frag  toneMapPass_glsl.vert  visibilityPass_glsl.frag  visibilityPass_glsl.vert  zprepassShader_glsl.vert
inMyRoom_vulkan/shaders/common/: FloatComperableUsingInt.h  RoughnessLengthMap.h  bayer.glsl  brdf.glsl  defines.h  environmentTerm.glsl  evaluateBounce.glsl  intersectOriginTriangle.glsl  intersectTriangle.glsl  luminance.glsl  rayOffsetFace.glsl  reservoir.glsl  rng.glsl  sRGBencode.glsl  samplesPosition.glsl  toneMap.glsl  visibilityBufferPack.glsl
inMyRoom_vulkan/shaders/rendererOffline/: lightSourcePass_glsl.frag  lightSourcePass_glsl.vert  shadePass_glsl.frag  toneMapPass_glsl.frag
inMyRoom_vulkan/shaders/rendererRealtime/: lightDrawPass_glsl.frag  lightDrawPass_glsl.vert  morphologicalAA_glsl.comp  pathTracePass_glsl.frag  pathTracePass_glsl.vert  resolveShader_glsl.comp  visibilityPass_glsl.frag
inMyRoom_vulkan/src/: CameraBaseClass.cpp  ComponentBaseClass.cpp  Cuboid.cpp  Drawer.cpp  ECSwrapper.cpp  Engine.cpp  EnginesExportedFunctions.cpp  EntitiesHandler.cpp  ExportedFunctionsConstructor.cpp  Frustum.cpp  FrustumCulling.cpp  GameDLLimporter.cpp  GameImport.cpp  GameImporter.cpp  Graphics.cpp  ImagesAboutOfTextures.cpp  ImagesUsageOfTextures.cpp  InputManager.cpp  MaterialsOfPrimitives.cpp  MaterialsShaders.cpp  MaterialsTextures.cpp  MeshesOfNodes.cpp  MeshesPrimitives.cpp  MipmapsGenerator.cpp  ModelDrawComp.cpp  ModelDrawCompEntity.cpp  MovementBaseClass.cpp  NaiveCamera.cpp  NodeGlobalMatrixComp.cpp  NodeGlobalMatrixCompEntity.cpp  NodesMeshes.cpp  NodesOfScene.cpp  NodesTree.cpp  OBB.cpp  PipelinesFactory.cpp  PipelinesOfPrimitives.cpp  Plane.cpp  PositionComp.cpp  PositionCompEntity.cpp  PrimitivesMaterials.cpp  (+16 more)
inMyRoom_vulkan/src/CollisionDetection/: CollisionDetection.cpp  CreateUncollideRays.cpp  OBBtreesCollision.cpp  RayDeltaUncollide.cpp  ShootUncollideRays.cpp  SweepAndPrune.cpp  TrianglesVsTriangles.cpp
inMyRoom_vulkan/src/ECS/: ComponentBaseClass.cpp  ComponentRawBaseClass.cpp  ComponentSparseBaseClass.cpp  ECSwrapper.cpp  EnginesExportedFunctions.cpp  EntitiesHandler.cpp  ExportedFunctions.cpp
inMyRoom_vulkan/src/Geometry/: Cuboid.cpp  Cylinder.cpp  FrustumCulling.cpp  OBB.cpp  OBBtree.cpp  Paralgram.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Triangle.cpp  ViewportFrustum.cpp
inMyRoom_vulkan/src/Graphics/: Drawer.cpp  DynamicMeshes.cpp  Exposure.cpp  Graphics.cpp  HelperUtils.cpp  ImageData.cpp  ImagesInterfaces.cpp  Lights.cpp  MipmapsGenerator.cpp  NRDintegration.cpp  PipelinesFactory.cpp  RendererBase.cpp  ShadersSetsFamiliesCache.cpp  TLASbuilder.cpp  TLASinstance.cpp  VulkanInit.cpp
inMyRoom_vulkan/src/Meshes/: ImagesAboutOfTextures.cpp  MaterialsOfPrimitives.cpp  MeshesOfNodes.cpp  PrimitivesOfMeshes.cpp  SkinsOfMeshes.cpp  TexturesOfMaterials.cpp
inMyRoom_vulkan/testGames/SnakeGame/: gameConfig.cfg  gameConfig_profile.cfg
inMyRoom_vulkan/testGames/Sponza/: gameConfig.cfg
inMyRoom_vulkan/testGames/Table_room/: gameConfig.cfg
inMyRoom_vulkan/testModel/: 3dsmaxTesting.gltf  someStuffs.gltf
(+141 files in other folders)
